awards section mobile fix

--- a/src/app/components/Awards/Awards.module.scss
+++ b/src/app/components/Awards/Awards.module.scss
@@ -35,17 +35,7 @@
     .cardAwards {
         position: relative;
         background-color: #ECE6D8;
-        margin-bottom: 2rem;
         padding: 1rem;
-
-        @media(min-width: 1101px) {
-            margin-left: 2rem;
-        }
-        
-        @media(min-width: 770px) and (max-width: 1100px) {
-            margin-left: 2rem;
-            margin-bottom: 2rem;
-        }
 
         @media(max-width: 768px) {
             min-width: 90%;
@@ -54,22 +44,10 @@
 
         @media(max-width: 400px) {
             min-width: 100%;
-            margin-left: 0;
         }
 
         @media(max-width: 350px) {
-            margin-left: -1rem;
-        }
-
-        &.lessMargin {
-            margin-left: 0;
-            @media(min-width: 770px) and (max-width: 1101px) {
-                margin-left: 2rem;
-            }
-            @media(max-width: 400px) {
-                margin-left: 0;
-
-            }
+            // margin-left: -1rem;
         }
 
         &Wrapper {
@@ -77,6 +55,7 @@
             flex-direction: row !important;
             min-height: max-content;
             padding: 0 2rem;
+            gap: 2rem;
 
             @media(max-width: 1101px) {
                 min-width: 100dvw;
@@ -85,6 +64,8 @@
             }
 
             @media(max-width: 768px) {
+                position: relative;
+                left: -0.5rem;
                 padding: 0 1.5rem;
                 min-width: 100dvw;
             }
